# CodeAegis

./: CREDITS.md  Cargo.toml  Dockerfile  README.md  build.rs  report.sarif
.agent/skills/codeaegis/: SKILL.md
example_code/: Dockerfile  clean.py  secrets.py  xss.js
example_code/subdir/: nested.py
man/: codeaegis.1
src/: auth.rs  cache.rs  cli.rs  cli_args.rs  engine.rs  exclusions.rs  lsp.rs  main.rs  mcp.rs  watchdog.rs
src/critic/: mod.rs  prompts.rs
src/scanners/: mod.rs  opengrep.rs  osv.rs  trivy.rs  trufflehog.rs
tests/: e2e.rs
