[package]
name = "codeaegis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dashmap = "6.0"
moka = { version = "0.12", features = ["future"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
envy = "0.4"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
keyring = "2.3"
rpassword = "7.3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
tower-lsp = "0.20.0"

[[bin]]
name = "codeaegis"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
